--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
-TITLE = 'Azure Voting App'
-VOTE1VALUE = 'Cats'
+TITLE = 'My Voting App'
+VOTE1VALUE = 'Fish'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
