--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations - be careful
-TITLE = 'My first Voting App'
+TITLE = 'My feedback Voting App'
 VOTE1VALUE = 'Fishy'
 VOTE2VALUE = 'Doggy'
 SHOWHOST = 'false'
