--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -1,16 +1,16 @@
-#kind: Namespace
-#apiVersion: v1
-#metadata:
-#  name: myvotingnamespace
- # labels:
- #   name: myvotingnamespace
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: myvotingnamespace
+ labels:
+   name: myvotingnamespace
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: azure-vote-back
-  #namespace: myvotingnamespace
+  namespace: myvotingnamespace
 spec:
   replicas: 1
   selector:
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: azure-vote-back
-  #namespace: myvotingnamespace
+  namespace: myvotingnamespace
 spec:
   ports:
   - port: 6379
@@ -48,7 +48,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: azure-vote-front
-  #namespace: myvotingnamespace
+  namespace: myvotingnamespace
 spec:
   replicas: 1
   selector:
@@ -84,7 +84,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: azure-vote-front
-  #namespace: myvotingnamespace
+  namespace: myvotingnamespace
 spec:
   type: LoadBalancer
   ports:
