--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations - be careful
-TITLE = 'My feedback Voting App'
-VOTE1VALUE = 'Fishy'
-VOTE2VALUE = 'Doggy'
+TITLE = 'My feedback App'
+VOTE1VALUE = 'Good'
+VOTE2VALUE = 'Need work'
 SHOWHOST = 'false'
