--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations - be careful
-TITLE = 'My first feedback App'
+TITLE = 'My second feedback App'
 VOTE1VALUE = 'Good'
 VOTE2VALUE = 'Need work'
 SHOWHOST = 'false'
